fix: Fix couple of code scanning issues

--- a/src/aws-mcp-server/pyproject.toml
+++ b/src/aws-mcp-server/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "sentence-transformers>=4.1.0",
     "faiss-cpu>=1.11.0",
     "loguru>=0.7.3",
+    "importlib_resources>=6.0.0",
 ]
 license = {text = "Apache-2.0"}
 license-files = ["LICENSE", "NOTICE" ]
