--- a/src/aws-mcp-server/.pre-commit-config.yaml
+++ b/src/aws-mcp-server/.pre-commit-config.yaml
@@ -3,10 +3,12 @@ repos:
     hooks:
         - id: install-deps
           name: Install project dependencies
-          entry: cd src/aws-mcp-server/awslabs/aws_mcp_server && pip install importlib_resources
+          entry: bash -c 'python -m ensurepip --upgrade && python -m pip install importlib_resources'
           language: system
           require_serial: true
           pass_filenames: false
+          stages: [pre-commit]
+          always_run: true
         - id: metadata-script
           name: ensure confirm-list up-to-date
           entry: python src/aws-mcp-server/awslabs/aws_mcp_server/core/metadata/confirm_list.py --output src/aws-mcp-server/awslabs/aws_mcp_server/core/data/confirm_list.json
