fix: ensure aws-mcp-server package is installed before generating confirm list

--- a/src/aws-mcp-server/.pre-commit-config.yaml
+++ b/src/aws-mcp-server/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
     hooks:
         - id: install-deps
           name: Install project dependencies
-          entry: bash -c 'python -m ensurepip --upgrade && python -m pip install importlib_resources'
+          entry: bash -c 'python -m ensurepip --upgrade && python -m pip install importlib_resources && cd src/aws-mcp-server && python -m pip install -e .'
           language: system
           require_serial: true
           pass_filenames: false
@@ -11,7 +11,7 @@ repos:
           always_run: true
         - id: metadata-script
           name: ensure confirm-list up-to-date
-          entry: python src/aws-mcp-server/awslabs/aws_mcp_server/core/metadata/confirm_list.py --output src/aws-mcp-server/awslabs/aws_mcp_server/core/data/confirm_list.json
+          entry: bash -c 'cd src/aws-mcp-server && python awslabs/aws_mcp_server/core/metadata/confirm_list.py --output awslabs/aws_mcp_server/core/data/confirm_list.json'
           description: Ensure confirm-list is updated. If failed, review the generated change and add.
           language: system
           stages: [pre-commit]
