--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -53,11 +53,27 @@ jobs:
           docker build -t docker.io/${{ matrix.dockerfile }}:${{ github.sha }} .
 
       - name: Run Trivy vulnerability scanner
+        if: hashFiles(format('{0}/trivy-results.sarif', matrix.dockerfile)) == ''
         uses: aquasecurity/trivy-action@76071ef0d7ec797419534a183b498b4d6366cf37 #v0.31.0
         with:
           image-ref: 'docker.io/${{ matrix.dockerfile }}:${{ github.sha }}'
           format: 'sarif'
           output: '${{ matrix.dockerfile }}/trivy-results.sarif'
+
+      - name: Check if trivy-results.sarif is part of PR changes
+        if: github.event_name == 'pull_request' && hashFiles(format('{0}/trivy-results.sarif', matrix.dockerfile)) != ''
+        id: check-sarif-in-pr
+        run: |
+          # Check if trivy-results.sarif is in the PR changes
+          if [ git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} | grep -q "${{ matrix.dockerfile }}/trivy-results.sarif" ]; then
+            echo "trivy-results.sarif is in the PR changes"
+            echo "sarif-in-pr=true" >> $GITHUB_OUTPUT
+            exit 0
+          else
+            echo "Either remove the trivy-results.sarif or include it in the PR"
+            echo "sarif-in-pr=false" >> $GITHUB_OUTPUT
+            exit 1
+          fi
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@57eebf61a2246ab60a0c2f5a85766db783ad3553 # v3.28.15
