--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -46,6 +46,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          lfs: true
 
       - name: Build an image from Dockerfile
         working-directory: ${{ matrix.dockerfile }}
@@ -66,11 +68,11 @@ jobs:
         run: |
           # Check if trivy-results.sarif is in the PR changes
           if [ git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} | grep -q "${{ matrix.dockerfile }}/trivy-results.sarif" ]; then
-            echo "trivy-results.sarif is in the PR changes"
+            echo "${{ matrix.dockerfile }}/trivy-results.sarif is in the PR changes"
             echo "sarif-in-pr=true" >> $GITHUB_OUTPUT
             exit 0
           else
-            echo "Either remove the trivy-results.sarif or include it in the PR"
+            echo "Either remove the ${{ matrix.dockerfile }}/trivy-results.sarif or include it in the PR"
             echo "sarif-in-pr=false" >> $GITHUB_OUTPUT
             exit 1
           fi
