fix: sarif instead of json, add .gitignore
Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -570,3 +570,6 @@ src/openapi-mcp-server/*.txt
 src/openapi-mcp-server/*-coverage.xml
 src/openapi-mcp-server/junit.xml
 executive-summary.md
+
+# Trivy Results
+trivy-results.sarif
