--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -57,20 +57,7 @@ jobs:
           lfs: true
           fetch-depth: ${{ steps.checkout-depth.outputs.fetch-depth || '1' }}
 
-      - name: Build an image from Dockerfile
-        working-directory: ${{ matrix.dockerfile }}
-        run: |
-          docker build -t docker.io/${{ matrix.dockerfile }}:${{ github.sha }} .
-
-      - name: Run Trivy vulnerability scanner
-        if: hashFiles(format('{0}/trivy-results.sarif', matrix.dockerfile)) == ''
-        uses: aquasecurity/trivy-action@76071ef0d7ec797419534a183b498b4d6366cf37 #v0.31.0
-        with:
-          image-ref: 'docker.io/${{ matrix.dockerfile }}:${{ github.sha }}'
-          format: 'sarif'
-          output: '${{ matrix.dockerfile }}/trivy-results.sarif'
-
-      - name: Check if trivy-results.sarif is part of PR changes
+      - name: If trivy-results.sarif exists, it must be part of the PR changes
         if: github.event_name == 'pull_request' && hashFiles(format('{0}/trivy-results.sarif', matrix.dockerfile)) != ''
         id: check-sarif-in-pr
         run: |
@@ -84,7 +71,7 @@ jobs:
           # Errors with "fatal: Invalid revision range" so using "HEAD" instead:
           echo "::endgroup::"
 
-          if git diff --name-only ${{ github.event.pull_request.base.sha }}..HEAD | grep -q "${{ matrix.dockerfile }}/trivy-results.sarif"; then
+          if git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ steps.checkout-code.outputs.commit }} | grep -q "${{ matrix.dockerfile }}/trivy-results.sarif"; then
             echo "${{ matrix.dockerfile }}/trivy-results.sarif is in the PR changes"
             echo "sarif-in-pr=true" >> $GITHUB_OUTPUT
             exit 0
@@ -93,6 +80,19 @@ jobs:
             echo "sarif-in-pr=false" >> $GITHUB_OUTPUT
             exit 1
           fi
+
+      - name: Build an image from Dockerfile
+        working-directory: ${{ matrix.dockerfile }}
+        run: |
+          docker build -t docker.io/${{ matrix.dockerfile }}:${{ github.sha }} .
+
+      - name: Run Trivy vulnerability scanner
+        if: hashFiles(format('{0}/trivy-results.sarif', matrix.dockerfile)) == ''
+        uses: aquasecurity/trivy-action@76071ef0d7ec797419534a183b498b4d6366cf37 #v0.31.0
+        with:
+          image-ref: 'docker.io/${{ matrix.dockerfile }}:${{ github.sha }}'
+          format: 'sarif'
+          output: '${{ matrix.dockerfile }}/trivy-results.sarif'
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@57eebf61a2246ab60a0c2f5a85766db783ad3553 # v3.28.15
