fix: view before and after lfs pull
Signed-off-by: Scott Schreckengaust <scottschreckengaust@users.noreply.github.com>

--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -63,17 +63,16 @@ jobs:
         run: |
           # Check if trivy-results.sarif is in the PR changes
 
-          echo "::group::Logging the issue for debugging purposes"
-          # DEBUG: Show the diff for debugging purposes
-          git log # DEBUG: Show git log for debugging purposes
-          git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} || true
-          git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ steps.checkout-code.outputs.commit }} || true
-          # Errors with "fatal: Invalid revision range" so using "HEAD" instead:
-          echo "::endgroup::"
-
           if git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ steps.checkout-code.outputs.commit }} | grep -q "${{ matrix.dockerfile }}/trivy-results.sarif"; then
             echo "${{ matrix.dockerfile }}/trivy-results.sarif is in the PR changes"
             echo "sarif-in-pr=true" >> $GITHUB_OUTPUT
+            echo "::group::Here is the SARIF file before LFS pull"
+            cat "${{ matrix.dockerfile }}/trivy-results.sarif"
+            echo "::endgroup::"
+            git lfs pull --include="${{ matrix.dockerfile }}/trivy-results.sarif"
+            echo "::group::Here is the SARIF file after LFS pull"
+            cat "${{ matrix.dockerfile }}/trivy-results.sarif"
+            echo "::endgroup::"
             exit 0
           else
             echo "Either remove the ${{ matrix.dockerfile }}/trivy-results.sarif or include it in the PR"
