--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -69,7 +69,7 @@ jobs:
             echo "::group::Here is the SARIF file before LFS pull"
             cat "${{ matrix.dockerfile }}/trivy-results.sarif"
             echo "::endgroup::"
-            git lfs pull --include="${{ matrix.dockerfile }}/trivy-results.sarif"
+            git lfs checkout "${{ matrix.dockerfile }}/trivy-results.sarif"
             echo "::group::Here is the SARIF file after LFS pull"
             cat "${{ matrix.dockerfile }}/trivy-results.sarif"
             echo "::endgroup::"
