--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -69,6 +69,7 @@ jobs:
             echo "::group::Here is the SARIF file before LFS pull"
             cat "${{ matrix.dockerfile }}/trivy-results.sarif"
             echo "::endgroup::"
+            git lfs ls-files
             git lfs checkout "${{ matrix.dockerfile }}/trivy-results.sarif"
             echo "::group::Here is the SARIF file after LFS pull"
             cat "${{ matrix.dockerfile }}/trivy-results.sarif"
