--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -14,8 +14,18 @@ jobs:
       contents: read
     outputs:
       packages: ${{ steps.find-packages.outputs.packages }}
+      aws-mcp-changed: ${{ steps.aws-mcp-changed.outputs.aws-mcp-changed }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: Should rebuild AWS MCP embeddings
+        id: aws-mcp-changed
+        run: |
+          # Check if aws-mcp-server files changed
+          if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -q "^src/aws-mcp-server/"; then
+            echo "aws-mcp-changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "aws-mcp-changed=false" >> $GITHUB_OUTPUT
+          fi
       - name: Find Python packages
         id: find-packages
         working-directory: src
@@ -117,6 +127,13 @@ jobs:
       - name: Run ruff check
         working-directory: src/${{ matrix.package }}
         run: uv run --frozen ruff check .
+
+      - name: Run generate-embeddings script if it is aws-mcp-server
+        working-directory: src/${{ matrix.package }}
+        run: |
+          if [ "${{ matrix.package }}" == "aws-mcp-server" ] && [ "${{ needs.detect-packages.outputs.aws-mcp-changed }}" == "true" ]; then
+            uv run --frozen generate-embeddings
+          fi
 
       - name: Build package
         working-directory: src/${{ matrix.package }}
