add debug for workflow

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -22,11 +22,30 @@ jobs:
       - name: Should rebuild AWS MCP embeddings
         id: aws-mcp-changed
         run: |
-          # Check if aws-mcp-server files changed
+          echo "=== DEBUGGING CHANGE DETECTION ==="
+          echo "Event: ${{ github.event_name }}"
+          echo "Current SHA: $(git rev-parse HEAD)"
+          echo "Previous SHA: $(git rev-parse HEAD~1)"
+          
+          echo "=== GIT LOG (last 3 commits) ==="
+          git log --oneline -3
+          
+          echo "=== CHANGED FILES ==="
+          git diff --name-only HEAD~1 HEAD
+          
+          echo "=== FILES MATCHING PATTERN ==="
+          git diff --name-only HEAD~1 HEAD | grep "^src/aws-mcp-server/" || echo "No matches found"
+          
+          echo "=== GREP EXIT CODE ==="
+          git diff --name-only HEAD~1 HEAD | grep -q "^src/aws-mcp-server/"
+          echo "Grep exit code: $?"
+          
           if git diff --name-only HEAD~1 HEAD | grep -q "^src/aws-mcp-server/"; then
             echo "aws-mcp-changed=true" >> $GITHUB_OUTPUT
+            echo "✅ Setting aws-mcp-changed=true"
           else
             echo "aws-mcp-changed=false" >> $GITHUB_OUTPUT
+            echo "❌ Setting aws-mcp-changed=false"
           fi
       - name: Find Python packages
         id: find-packages
