--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -17,6 +17,8 @@ jobs:
       aws-mcp-changed: ${{ steps.aws-mcp-changed.outputs.aws-mcp-changed }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          fetch-depth: 0
       - name: Should rebuild AWS MCP embeddings
         id: aws-mcp-changed
         run: |
