--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -22,25 +22,45 @@ jobs:
       - name: Should rebuild AWS MCP embeddings
         id: aws-mcp-changed
         run: |
+          echo "=== DEBUGGING CHANGE DETECTION ==="
+          echo "Event: ${{ github.event_name }}"
+          echo "Current SHA: $(git rev-parse HEAD)"
+          
           if [ "${{ github.event_name }}" == "pull_request" ]; then
+            echo "Base branch: ${{ github.base_ref }}"
+            echo "=== CHANGED FILES (PR) ==="
+            git diff --name-only origin/${{ github.base_ref }}...HEAD
+            echo "=== FILES MATCHING PATTERN (PR) ==="
+            git diff --name-only origin/${{ github.base_ref }}...HEAD | grep "^src/aws-mcp-server/" || echo "No matches found"
+            
             if git diff --name-only origin/${{ github.base_ref }}...HEAD | grep -q "^src/aws-mcp-server/"; then
               echo "aws-mcp-changed=true" >> $GITHUB_OUTPUT
+              echo "✅ PR changes detected - setting aws-mcp-changed=true"
             else
               echo "aws-mcp-changed=false" >> $GITHUB_OUTPUT
+              echo "❌ No PR changes - setting aws-mcp-changed=false"
             fi
           else
+            echo "Before SHA: ${{ github.event.before }}"
+            echo "After SHA: ${{ github.sha }}"
+            echo "=== CHANGED FILES (PUSH) ==="
+            git diff --name-only ${{ github.event.before }} ${{ github.sha }}
+            echo "=== FILES MATCHING PATTERN (PUSH) ==="
+            git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep "^src/aws-mcp-server/" || echo "No matches found"
+            
             if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -q "^src/aws-mcp-server/"; then
               echo "aws-mcp-changed=true" >> $GITHUB_OUTPUT
+              echo "✅ Push changes detected - setting aws-mcp-changed=true"
             else
               echo "aws-mcp-changed=false" >> $GITHUB_OUTPUT
+              echo "❌ No push changes - setting aws-mcp-changed=false"
             fi
           fi
       - name: Find Python packages
         id: find-packages
         working-directory: src
         run: |
-          PACKAGES=$(find . -name pyproject.toml -exec dirname {} \; | sed 's/^\.\///' | jq -R -s -c 'split("\n")[:-1]')
-          echo "packages=$PACKAGES" >> $GITHUB_OUTPUT
+          echo "packages=[aws-mcp-server]" >> $GITHUB_OUTPUT
 
   build:
     needs: [detect-packages]
