--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -60,7 +60,8 @@ jobs:
         id: find-packages
         working-directory: src
         run: |
-          echo "packages=[aws-mcp-server]" >> $GITHUB_OUTPUT
+          PACKAGES=$(find . -name pyproject.toml -exec dirname {} \; | sed 's/^\.\///' | jq -R -s -c 'split("\n")[:-1]')
+          echo "packages=$PACKAGES" >> $GITHUB_OUTPUT
 
   build:
     needs: [detect-packages]
