--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -93,7 +93,7 @@ jobs:
           echo "packages=$PACKAGES" >> $GITHUB_OUTPUT
 
   build:
-    needs: [detect-packages, look-for-changes]
+    needs: [detect-packages]
     if: ${{ needs.detect-packages.outputs.packages != '[]' && needs.detect-packages.outputs.packages != '' }}
     strategy:
       fail-fast: false
@@ -188,7 +188,7 @@ jobs:
         run: uv run --frozen ruff check .
 
       - name: Run generate-embeddings script if it is aws-mcp-server
-        if: needs.look-for-changes.outputs.changed-directories != '[]' && needs.look-for-changes.outputs.changed-directories != '' && contains(needs.look-for-changes.outputs.changed-directories, 'aws-mcp-server')
+        if: needs.detect-packages.outputs.changed-directories != '[]' && needs.detect-packages.outputs.changed-directories != '' && contains(needs.look-for-changes.outputs.changed-directories, 'aws-mcp-server')
         working-directory: src/${{ matrix.package }}
         run: |
           uv run --frozen generate-embeddings
