--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -201,7 +201,7 @@ jobs:
           echo "${{ fromJson(needs.detect-packages.outputs.changed-directories) }}"
 
       - name: Run generate-embeddings script if it is aws-mcp-server
-        if: needs.detect-packages.outputs.changed-directories != '[]' && needs.detect-packages.outputs.changed-directories != '' && contains(toJson('["aws-mcp-server"]'), 'aws-mcp-server')
+        if: needs.detect-packages.outputs.changed-directories != '[]' && needs.detect-packages.outputs.changed-directories != '' && contains(needs.detect-packages.outputs.changed-directories, 'aws-mcp-server')
         working-directory: src/${{ matrix.package }}
         run: |
           echo "yes"
