--- a/src/aws-mcp-server/pyproject.toml
+++ b/src/aws-mcp-server/pyproject.toml
@@ -51,6 +51,7 @@ changelog = "https://github.com/awslabs/mcp/blob/main/src/aws-mcp-server/CHANGEL
 [project.scripts]
 "awslabs.aws-mcp-server" = "awslabs.aws_mcp_server.server:main"
 "generate-embeddings" = "awslabs.aws_mcp_server.core.kb.generate_embeddings:main"
+"check-and-download-embeddings" = "awslabs.aws_mcp_server.core.kb.check_and_download_embeddings:main"
 
 [dependency-groups]
 dev = [
