--- a/src/aws-mcp-server/pyproject.toml
+++ b/src/aws-mcp-server/pyproject.toml
@@ -50,8 +50,8 @@ changelog = "https://github.com/awslabs/mcp/blob/main/src/aws-mcp-server/CHANGEL
 
 [project.scripts]
 "awslabs.aws-mcp-server" = "awslabs.aws_mcp_server.server:main"
-"generate-embeddings" = "awslabs.aws_mcp_server.core.kb.generate_embeddings:main"
-"check-and-download-embeddings" = "awslabs.aws_mcp_server.core.kb.check_and_download_embeddings:main"
+"generate-embeddings" = "awslabs.aws_mcp_server.scripts.generate_embeddings:main"
+"download-latest-embeddings" = "awslabs.aws_mcp_server.scripts.download_latest_embeddings:main"
 
 [dependency-groups]
 dev = [
