--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -28,17 +28,22 @@ jobs:
           fetch-depth: 0
       - name: find changed directories
         id: find-changed-directories
+        env:
+          EVENT_NAME: ${{ github.event_name }}
+          EVENT_BEFORE: ${{ github.event.before }}
+          BASE_REF: ${{ github.base_ref }}
+          INPUT_SINCE: ${{ inputs.since }}
         run: |
           # Push         against last commit
           # Pull Request against target branch sha
           # Workflow     against input
           # Otherwise    against latest release
-          if [ "${{ github.event_name }}" == "push" ]; then
-            SINCE="${{ github.event.before }}";
-          elif [ "${{ github.event_name }}" == "pull_request" ]; then
-            SINCE="${{ github.base_ref }}";
-          elif [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
-            SINCE="${{ inputs.since }}"
+          if [ "$EVENT_NAME" == "push" ]; then
+            SINCE="$EVENT_BEFORE";
+          elif [ "$EVENT_NAME" == "pull_request" ]; then
+            SINCE="$BASE_REF";
+          elif [ "$EVENT_NAME" == "workflow_dispatch" ]; then
+            SINCE="$INPUT_SINCE"
           else
             SINCE="$(gh release list --exclude-drafts --exclude-pre-releases --limit 1 --json tagName | jq -r '.[].tagName')"
           fi;
@@ -51,15 +56,20 @@ jobs:
 
       - name: Should rebuild AWS MCP embeddings
         id: aws-mcp-changed
+        env:
+          EVENT_NAME: ${{ github.event_name }}
+          BASE_REF: ${{ github.base_ref }}
+          EVENT_BEFORE: ${{ github.event.before }}
+          SHA: ${{ github.sha }}
         run: |
-          if [ "${{ github.event_name }}" == "pull_request" ]; then
-            echo "Base branch: ${{ github.base_ref }}"
+          if [ "$EVENT_NAME" == "pull_request" ]; then
+            echo "Base branch: $BASE_REF"
             echo "=== CHANGED FILES (PR) ==="
-            git diff --name-only origin/${{ github.base_ref }}...HEAD
+            git diff --name-only "origin/$BASE_REF"...HEAD
             echo "=== FILES MATCHING PATTERN (PR) ==="
-            git diff --name-only origin/${{ github.base_ref }}...HEAD | grep "^src/aws-mcp-server/" || echo "No matches found"
+            git diff --name-only "origin/$BASE_REF"...HEAD | grep "^src/aws-mcp-server/" || echo "No matches found"
 
-            if git diff --name-only origin/${{ github.base_ref }}...HEAD | grep -q "^src/aws-mcp-server/"; then
+            if git diff --name-only "origin/$BASE_REF"...HEAD | grep -q "^src/aws-mcp-server/"; then
               echo "aws-mcp-changed=true" >> $GITHUB_OUTPUT
               echo "PR changes detected - setting aws-mcp-changed=true"
             else
@@ -67,14 +77,14 @@ jobs:
               echo "No PR changes - setting aws-mcp-changed=false"
             fi
           else
-            echo "Before SHA: ${{ github.event.before }}"
-            echo "After SHA: ${{ github.sha }}"
+            echo "Before SHA: $EVENT_BEFORE"
+            echo "After SHA: $SHA"
             echo "=== CHANGED FILES (PUSH) ==="
-            git diff --name-only ${{ github.event.before }} ${{ github.sha }}
+            git diff --name-only "$EVENT_BEFORE" "$SHA"
             echo "=== FILES MATCHING PATTERN (PUSH) ==="
-            git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep "^src/aws-mcp-server/" || echo "No matches found"
+            git diff --name-only "$EVENT_BEFORE" "$SHA" | grep "^src/aws-mcp-server/" || echo "No matches found"
 
-            if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -q "^src/aws-mcp-server/"; then
+            if git diff --name-only "$EVENT_BEFORE" "$SHA" | grep -q "^src/aws-mcp-server/"; then
               echo "aws-mcp-changed=true" >> $GITHUB_OUTPUT
               echo "Push changes detected - setting aws-mcp-changed=true"
             else
