--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -19,6 +19,8 @@ jobs:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
+      - name: Fetch base branch
+        run: git fetch origin ${{ github.base_ref }}:${{ github.base_ref }}
       - name: find changed directories
         id: find-changed-directories
         env:
