feat: build embeddings (#7)
Implement embeddings generation CI.

During build time check if aws-mcp-server files were changed
Download latest GH artifact for 'main' branch
Unpack its source and check existence of embeddings artifact
If it is present - check its awscli version (stated in the name).
4.1 If local awscli version is same as stated in the embeddings title - use this file
4.2 If local awscli version is different - generate new embeddings
If it is not present - generate embeddings
During uv build, package embeddings into final distribution

---------

Signed-off-by: GitHub <noreply@github.com>
Co-authored-by: Roman Shevchuk <rshev@amazon.com>

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -14,8 +14,37 @@ jobs:
       contents: read
     outputs:
       packages: ${{ steps.find-packages.outputs.packages }}
+      changed-directories: ${{ steps.find-changed-directories.outputs.changed-directories }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          fetch-depth: 0
+      - name: Fetch base branch
+        run: git fetch origin ${{ github.base_ref }}:${{ github.base_ref }}
+      - name: find changed directories
+        id: find-changed-directories
+        env:
+          EVENT_NAME: ${{ github.event_name }}
+          EVENT_BEFORE: ${{ github.event.before }}
+          BASE_REF: ${{ github.base_ref }}
+        run: |
+          # Push         against last commit
+          # Pull Request against target branch sha
+          # Otherwise    against latest release
+          if [ "$EVENT_NAME" == "push" ]; then
+            SINCE="$EVENT_BEFORE";
+          elif [ "$EVENT_NAME" == "pull_request" ]; then
+            SINCE="$BASE_REF";
+          else
+            SINCE="$(gh release list --exclude-drafts --exclude-pre-releases --limit 1 --json tagName | jq -r '.[].tagName')"
+          fi;
+          if [ -z "$SINCE" ]; then SINCE="$(git rev-list --max-parents=0 HEAD)"; fi;
+          echo "$SINCE"
+          CHANGEDFILES="$(git diff --name-only "$SINCE" HEAD | sed 's/^\.\///' | jq -R -s -c 'split("\n")[:-1]')"
+          CHANGEDDIRECTORIES="$(echo $CHANGEDFILES | jq -r '.[] | select(. | startswith("src\/"))' | cut -d'/' -f2 | sort -u | sed 's/^\.\///' | jq -R -s -c 'split("\n")[:-1]')"
+          echo "$CHANGEDDIRECTORIES"
+          echo "changed-directories=$CHANGEDDIRECTORIES" >> $GITHUB_OUTPUT
+
       - name: Find Python packages
         id: find-packages
         working-directory: src
@@ -117,6 +146,19 @@ jobs:
       - name: Run ruff check
         working-directory: src/${{ matrix.package }}
         run: uv run --frozen ruff check .
+
+      - name: Check for existing embeddings or generate new ones if it is aws-mcp-server
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN}}
+        if: needs.detect-packages.outputs.changed-directories != '[]' && needs.detect-packages.outputs.changed-directories != '' && contains(needs.detect-packages.outputs.changed-directories, matrix.package) && matrix.package == 'aws-mcp-server'
+        working-directory: src/${{ matrix.package }}
+        run: |
+          if uv run --frozen download-latest-embeddings; then
+            echo "Successfully downloaded existing embeddings"
+          else
+            echo "No matching embeddings found, generating new ones..."
+            uv run --frozen generate-embeddings
+          fi
 
       - name: Build package
         working-directory: src/${{ matrix.package }}
