--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -32,9 +32,14 @@ jobs:
           # Pull Request against target branch sha
           # Otherwise    against latest release
           if [ "$EVENT_NAME" == "push" ]; then
-            SINCE="$EVENT_BEFORE";
+            # Handle null SHA case for new branches
+            if [ "$EVENT_BEFORE" == "0000000000000000000000000000000000000000" ]; then
+              SINCE="origin/main"
+            else
+              SINCE="$EVENT_BEFORE"
+            fi
           elif [ "$EVENT_NAME" == "pull_request" ]; then
-            SINCE="$BASE_REF";
+            SINCE="$BASE_REF"
           else
             SINCE="$(gh release list --exclude-drafts --exclude-pre-releases --limit 1 --json tagName | jq -r '.[].tagName')"
           fi;
@@ -68,6 +73,11 @@ jobs:
       actions: read
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: Fetch base branches
+        run: |
+          git fetch origin main:main
+          git fetch origin ${{ github.base_ref }}:${{ github.base_ref }}
 
       - name: Install uv
         uses: astral-sh/setup-uv@445689ea25e0de0a23313031f5fe577c74ae45a1 # v6.3.0
@@ -146,6 +156,41 @@ jobs:
       - name: Run ruff check
         working-directory: src/${{ matrix.package }}
         run: uv run --frozen ruff check .
+
+      - name: Should rebuild AWS MCP embeddings
+        id: aws-mcp-changed
+        if: needs.detect-packages.outputs.changed-directories != '[]' && needs.detect-packages.outputs.changed-directories != '' && contains(needs.detect-packages.outputs.changed-directories, matrix.package) && matrix.package == 'aws-mcp-server'
+        run: |
+          echo "=== DEBUGGING CHANGE DETECTION ==="
+          echo "Event: ${{ github.event_name }}"
+          echo "Current SHA: $(git rev-parse HEAD)"
+
+          if [ "${{ github.event_name }}" == "pull_request" ]; then
+            COMPARE_BASE="origin/${{ github.base_ref }}"
+            echo "Base branch: ${{ github.base_ref }}"
+          else
+            # Handle new branches by comparing with main
+            if [ "${{ github.event.before }}" == "0000000000000000000000000000000000000000" ]; then
+              COMPARE_BASE="origin/main"
+              echo "New branch detected, comparing with main"
+            else
+              COMPARE_BASE="${{ github.event.before }}"
+              echo "Before SHA: ${{ github.event.before }}"
+            fi
+          fi
+
+          echo "=== CHANGED FILES ==="
+          git diff --name-only $COMPARE_BASE...HEAD
+          echo "=== FILES MATCHING PATTERN ==="
+          git diff --name-only $COMPARE_BASE...HEAD | grep "aws_mcp_server/core/kb\|aws_mcp_server/scripts\|aws_mcp_server/core/data/embeddings" || echo "No matches found"
+
+          if git diff --name-only $COMPARE_BASE...HEAD | grep -q "aws_mcp_server/core/kb\|aws_mcp_server/scripts\|aws_mcp_server/core/data/embeddings"; then
+            echo "aws-mcp-changed=true" >> $GITHUB_OUTPUT
+            echo "Changes detected - setting aws-mcp-changed=true"
+          else
+            echo "aws-mcp-changed=false" >> $GITHUB_OUTPUT
+            echo "No changes - setting aws-mcp-changed=false"
+          fi
 
       - name: Check for existing embeddings or generate new ones if it is aws-mcp-server
         env:
