--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -163,7 +163,7 @@ jobs:
       - name: Debug changed files and directories
         run: |
           echo "changed-directories: ${{ needs.detect-packages.outputs.changed-directories }}"
-          echo "changed-files: ${{ needs.detect-packages.outputs.changed-files }}"
+          echo "changed-files: ${{ fromJson(needs.detect-packages.outputs.changed-files) }}"
           echo "matrix.package: ${{ matrix.package }}"
           echo "contains(join(' ', fromJson(needs.detect-packages.outputs.changed-files)), 'src/aws-mcp-server/awslabs/aws_mcp_server/core/kb/'): ${{ contains(join(' ', fromJson(needs.detect-packages.outputs.changed-files)), 'src/aws-mcp-server/awslabs/aws_mcp_server/core/kb/') }}"
           echo "contains(join(' ', fromJson(needs.detect-packages.outputs.changed-files)), 'src/aws-mcp-server/awslabs/aws_mcp_server/core/data/embeddings/'): ${{ contains(join(' ', fromJson(needs.detect-packages.outputs.changed-files)), 'src/aws-mcp-server/awslabs/aws_mcp_server/core/data/embeddings/') }}"
